RESOLVED FIXED210356
[Async overflow] Can't scroll vertically while over a horizontal scroller in this content
https://bugs.webkit.org/show_bug.cgi?id=210356
Summary [Async overflow] Can't scroll vertically while over a horizontal scroller in ...
Simon Fraser (smfr)
Reported 2020-04-10 14:20:40 PDT
[Async overflow] Can't scroll vertically while over a horizontal scroller in this content
Attachments
Patch (7.98 KB, patch)
2020-04-10 14:22 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2020-04-10 14:22:55 PDT
Simon Fraser (smfr)
Comment 2 2020-04-10 14:22:58 PDT
Simon Fraser (smfr)
Comment 3 2020-04-10 18:23:52 PDT
Note You need to log in before you can comment on or make changes to this bug.